crates/biome_js_parser/tests/js_test_suite/error/glimmer/glimmer_template_unclosed.gjs
// Unclosed template should produce error
const Broken = <template>
  <div>This template is never closed
